Remove orbit controls from graphic library

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -55,10 +55,15 @@ html {
       .ui {
         overflow: hidden;
         position: absolute;
+        pointer-events: none;
         top: 0;
         left: 0;
         right: 0;
         bottom: 0;
+
+        > * {
+          pointer-events: all;
+        }
       }
     }
   }
